# discomap

./: .dockerignore  .editorconfig  .gitignore  DEPLOYMENT.md  MIGRATION.md  ParquetFilesUrls (54).csv  README.md  REFACTORING_STATUS.md  SETUP_PULITO.md  alembic.ini  benchmark_download.py  docker-manage.ps1  monitor.ps1  pyproject.toml  pytest.ini  requirements.txt  run_server.py  test_api.py  test_sqlalchemy.py
.docker/: .env.example  Dockerfile.api  Dockerfile.postgres  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  requirements.txt  response.json
.docker/alembic/: env.py
.docker/dashboards/: discomap-main.json
.docker/pgadmin/: pgpass
.docker/postgres/: 04-sync-tracking.sql  docker-entrypoint-migrations.sh  (+1 more)
alembic/: env.py
archive_database_layer/: bulk_import.py
archive_src_legacy/: api_server.py  db_writer.py  parser.py  pollutant_mapper.py  sync_scheduler.py  utils.py
config/: .env.example  pytest.ini
data/: stations_example.csv  sync_state.json
docker/: .env.production.example  Dockerfile.api  Dockerfile.pgadmin  Dockerfile.postgres  deploy.ps1  deploy.sh  docker-compose.prod.yml  docker-compose.yml  reset-database.ps1
docs/: DOCKER_GUIDE.md
src/: __init__.py  analyzer.py  api_server.py  config.py  db_writer.py  download_eea_data.py  downloader.py  logger.py  main.py  sync_scheduler.py  validators.py
tests/: README.md  __init__.py  conftest.py  test_analyzer.py  test_config.py  test_models.py  test_parser.py  test_pollutant_mapper.py  test_postgres_integration.py  test_utils.py  test_validators.py
(+78 files in other folders)
